--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,26 @@ ul {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+.title {
+  color: #2E2E3C;
+  border: 1px solid #000;
+  border-radius: 4px;
+  padding: 10px 2px 10px 9px;
+  display: inline-block;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.title__link {
+  background: #9A98EA;
+  border-radius: 4px;
+  padding: 7px 10px;
+  color: #fff;
+}
+
+.title__express {
+  padding: 10px 9px;
+  margin-bottom: 40px;
+  margin-top: 40px;
+}
